--- a/projects.html
+++ b/projects.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Xi Zhang's Academic Page</title>
     <style>
+        :root {
+            --bg-color: #ffffff;
+            --text-color: #333333;
+            --header-bg: #2f4161;
+            --section-bg: #ffffff;
+            --link-color: #2f4161;
+            --paper-authors: #555;
+        }
+        [data-theme="dark"] {
+            --bg-color: #1a1a2e;
+            --text-color: #e0e0e0;
+            --header-bg: #16213e;
+            --section-bg: #1a1a2e;
+            --link-color: #64b5f6;
+            --paper-authors: #aaa;
+        }
         html, body {
             height: 100%;
         }
         body {
+            background-color: var(--bg-color);
+            color: var(--text-color);
+            transition: background-color 0.3s, color 0.3s;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -18,7 +38,8 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #2f4161;
+            background-color: var(--header-bg);
+            transition: background-color 0.3s;
             padding: 10px 20px;
             position: fixed;
             top: 0;
@@ -85,7 +106,8 @@
         }
         footer {
             text-align: center;
-            background-color: #2f4161;
+            background-color: var(--header-bg);
+            transition: background-color 0.3s;
             width: 100%;
             display: flex;
             flex-wrap: wrap;
@@ -119,6 +141,21 @@
             margin-top: 15px;
             border-top: 1px solid rgba(255,255,255,0.2);
         }
+        section a {
+            color: var(--link-color);
+        }
+        .theme-toggle {
+            background: transparent;
+            border: 1px solid #fff;
+            color: #fff;
+            padding: 2px 8px;
+            cursor: pointer;
+            font-size: 0.85em;
+            border-radius: 3px;
+        }
+        .theme-toggle:hover {
+            background: rgba(255,255,255,0.2);
+        }
     </style>
 </head>
 <body>
@@ -132,6 +169,7 @@
         </nav>
         <div class="right-group">
             <span class="name">Xi Zhang</span>
+            <button id="theme-toggle" class="theme-toggle" onclick="toggleTheme()" title="Toggle Theme">&#x1F319;</button>
             <div class="lang-switcher">
                 <button class="lang-btn" data-lang="en" onclick="setLang('en')">EN</button>
                 <button class="lang-btn" data-lang="zh-CN" onclick="setLang('zh-CN')">简</button>
